docs(readme): refresh for RBAC cutover + libduckdb prereq + PG16 floor
Catches the README up with today's storage-refactor branch
(Phases A–D of the Users.pdf RBAC cutover) and documents the
DuckDB native-library prerequisite that the Quick start path
silently assumed.

- Tagline / features: ACLs -> first-class RBAC graph (users · groups ·
  roles · table permissions · pool grants). New "Users page" entry.
- Architecture diagram: drop slkstate_acl_grant; add qodstate_*
  control-plane + RBAC tables; show the two-gate FlightSQL edge
  (handshake gates + per-statement ACL over RBAC EffectiveSet).
- Configuration table: fix QOD_PG_DBNAME default (qod, not tpch).
- REST API table: drop /api/acl/grant/*; document the new
  /api/{user,role,group,membership,pool/permission} surface plus
  identity endpoints, with the per-user /effective drilldown.
- Admin UI table: drop "ACL editor", add /users (Users · Groups ·
  Roles · Identities tabs + per-user Effective drilldown). Tenant
  detail tabs collapse to Databases + Pools.
- Rewrite the "ACL model" section as "Access control (RBAC)" with the
  entity inventory, the two-gate handshake + per-statement model, the
  effective-set closure formula, and a curl walkthrough for the new
  REST surface. Caveats spell out coarse DML / DDL coverage.
- Tech stack: pg requirement bumped to "PostgreSQL 16+", note the
  qodstate_* table family.
- Development: new Prerequisites subsection covers JDK17+,
  Postgres 16+ (with a pointer to the run-jar.sh version gate), and
  the libduckdb.so install / QOD_NATIVE_CLIENT=false fallback. Test
  count 574 -> 714.
- Project layout: add the rbac/ package; note the vendored acl/
  is parser-only after Phase C (file-based store unwired).
- Operational notes: seed target slkstate_user -> qodstate_user; the
  DML/DDL coarse-grant caveat now covers both layers.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>